Add Update privacy policy

--- a/WebStore/Views/Home/Privacy.cshtml
+++ b/WebStore/Views/Home/Privacy.cshtml
@@ -3,4 +3,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Hi! If you're just browsing this website, we collect the same basic information that most websites collect. We use common internet technologies such as cookies and web server logs. 
+    This is information we collect from everyone, whether they have an account on our site or not.
+    
+    If you have any inquiries about what has been stated above or other matters please feel free to send us an email at: placeholderEmailName@PlaceholderProvider.com</p>
